<resources>
    <string name="app_name">Fitness Everyday</string>
    <string name="action_settings">Settings</string>
    <string name="email" translatable="false">Email</string>
    <string name="passowrd" translatable="false">Password</string>
    <string name="login">LOGIN</string>
    <string name="Create_Acc">Create Account</string>
    <string name="no_acc_yet">No account yet? Create one</string>
    <string name="arm">Arm</string>
    <string name="shoulder">Shoulder</string>
    <string name="newUser" translatable="false">Not a Member yet? Sign Up here.</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="req_not_complete" translatable="true">Requirements not complete</string>
    <string name="chest">Chest</string>
    <string name="core">Core</string>
    <string name="Note_Added_Successfull">Note Added Successfully</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already a member? Login.</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit" translatable="false">SUBMIT</string>
    <string name="back">BACK</string>

    <string name="EX1.1">Step 1: Close-Grip Barbell Bench Press</string>
    <string name="EX1.2">3 sets, 4-6 reps</string>
    <string name="EX1.3">Lie back on a flat bench. Using a close grip (around shoulder width), lift the bar from the rack and hold it straight over you with your arms locked. This will be your starting position.
As you breathe in, come down slowly until you feel the bar on your middle chest.\n Tip: Make sure that - as opposed to a regular bench press - you keep the elbows close to the torso at all times in order to maximize triceps involvement.
Repeat the movement for the prescribed amount of repetitions. \n
When you are done, place the bar back in the rack.\n
Caution: If you are new at this exercise, it is advised that you use a spotter.\n If no spotter is available, then be conservative with the amount of weight used. Also, beware of letting the bar drift too far forward. You want the bar to fall on your middle chest and nowhere else
Variations: This exercise can also be performed with an e-z bar using the inner handle as well as dumbbells, in which case the palms of the hands will be facing each other.
</string>

    <string name="EX2.1">Step 2: Cable Rope Overhead Triceps Extension</string>
    <string name="EX2.2">2 sets, 8-12 reps</string>
    <string name="EX2.3">Attach a rope to the bottom pulley of the pulley machine.
Grasping the rope with both hands, extend your arms with your hands directly above your head using a neutral grip (palms facing each other).\n Your elbows should be in close to your head and the arms should be perpendicular to the floor with the knuckles aimed at the ceiling. This will be your starting position.
Slowly lower the rope behind your head as you hold the upper arms stationary./n Inhale as you perform this movement and pause when your triceps are fully stretched.
Return to the starting position by flexing your triceps as you breathe out./n
Repeat for the recommended amount of repetitions./n
Variations: You can also do this seated with a bench that has back support, or you can use a dumbbell instead of the rope.
</string>

    <string name="EX3.1">Step 3: Close-Grip Barbell Bench Press</string>
    <string name="EX3.2">3 sets, 4-6 reps</string>
    <string name="EX3.3">Lie back on a flat bench. Using a close grip (around shoulder width), lift the bar from the rack and hold it straight over you with your arms locked. This will be your starting position.
As you breathe in, come down slowly until you feel the bar on your middle chest. Tip: Make sure that - as opposed to a regular bench press - you keep the elbows close to the torso at all times in order to maximize triceps involvement.
Repeat the movement for the prescribed amount of repetitions.
When you are done, place the bar back in the rack.
Caution: If you are new at this exercise, it is advised that you use a spotter. If no spotter is available, then be conservative with the amount of weight used. Also, beware of letting the bar drift too far forward. You want the bar to fall on your middle chest and nowhere else
Variations: This exercise can also be performed with an e-z bar using the inner handle as well as dumbbells, in which case the palms of the hands will be facing each other.
</string>

    <string name="EX4.1">Step 4: Triceps Pushdown</string>
    <string name="EX4.2">2 sets, 15 reps</string>
    <string name="EX4.3">Attach a straight or angled bar to a high pulley and grab with an overhand grip (palms facing down) at shoulder width.
Standing upright with the torso straight and a very small inclination forward, bring the upper arms close to your body and perpendicular to the floor. The forearms should be pointing up towards the pulley as they hold the bar. This is your starting position.
Using the triceps, bring the bar down until it touches the front of your thighs and the arms are fully extended perpendicular to the floor. The upper arms should always remain stationary next to your torso and only the forearms should move. Exhale as you perform this movement.
After a second hold at the contracted position, bring the bar slowly up to the starting point. Breathe in as you perform this step.
Repeat for the recommended amount of repetitions.
Variations: There are many variations to this movement. For instance you can use an E-Z bar attachment as well as a V-angled bar that allows the thumb to be higher than the small finger. Also, you can attach a rope to the pulley as well as using a reverse grip on the bar exercises.
</string>

    <string name="EX5.1">Step 5: Barbell Curl</string>
    <string name="EX5.2">3 sets, 4-6 reps</string>
    <string name="EX5.3">Stand up with your torso upright while holding a barbell at a shoulder-width grip. The palm of your hands should be facing forward and the elbows should be close to the torso. This will be your starting position.
While holding the upper arms stationary, curl the weights forward while contracting the biceps as you breathe out. Tip: Only the forearms should move.
Continue the movement until your biceps are fully contracted and the bar is at shoulder level. Hold the contracted position for a second and squeeze the biceps hard.
Slowly begin to bring the bar back to starting position as your breathe in.
Repeat for the recommended amount of repetitions.
Variations:
You can also perform this movement using a straight bar attachment hooked to a low pulley. This variation seems to really provide a good contraction at the top of the movement.
You may also use the closer grip for variety purposes.
</string>
    <string name="add_note">add a note</string>
    <string name="auth_failed"> Authtication failed</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="Title">Title</string>
    <string name="Step">Step</string>
    <string name="Add">Add</string>
    <string name="Clear_all">Clear All</string>
    <string name="History">History</string>
    <string name="FitnessLogo" translatable="false">Fitness Logo</string>
    <string name="enterTitle" translatable="false">Enter Title</string>
    <string name="enterStep" translatable="false">Enter Step</string>
    <string name="LoginSucc">Login Succeeded</string>
    <string name="fill_all">Please Fill All Requirements</string>
    <string name="Reg_succ">Registration succeeded</string>


</resources>
