<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="app.sunshine.com.example.android.fitnesseveryday.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/arm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_greyish"
                android:gravity="center"
                android:text="@string/arm"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_greyish"
                android:gravity="center"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/chest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_greyish"
                android:gravity="center"
                android:text="@string/chest"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button

                android:id="@+id/core"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_greyish"
                android:gravity="center"

                android:text="@string/core"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/shoulder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white_greyish"

                android:gravity="center"
                android:text="@string/shoulder"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="bottom">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:id="@+id/sign_out"
    android:textColor="@color/white"
    android:layout_gravity="end|top"
    android:text="@string/sign_out"
    android:background="@color/colorPrimary"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/FitnessLogo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo3" />

                <Button
                    android:id="@+id/historybutton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/History"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>

